# sign_mao

./: .dockerignore  .gitignore  AGENTS.md  Makefile  docker-compose.yml
.codex/prompts/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: error_handlers.py
backend/app/api/v1/: __init__.py  auth.py  billboards.py  check_radius.py  import_billboards.py
backend/app/db/: init_db.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_schema.py
backend/app/models/: __init__.py  billboard.py  import_job_log.py
backend/app/schemas/: check_radius.py  error.py
backend/app/services/: audit_log_service.py  billboard_import_service.py  geocoding_client.py  geocoding_resolution.py  import_job_service.py  import_lineage.py  import_parser.py  radius_check_service.py  spatial_query.py  upload_validation.py
backend/tests/contract/: conftest.py  test_check_radius_contract.py  test_import_billboards_contract.py
backend/tests/integration/: conftest.py  test_check_radius_filters.py  test_check_radius_flow.py  test_import_flow.py
backend/tests/performance/: test_check_radius_perf.py
backend/tests/unit/: test_import_parser.py  test_radius_filters.py  test_spatial_query.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
(+40 files in other folders)
